assets/sass/site/primary/_posts-and-pages.scss
/* ... */
.entry-header {
	margin-bottom:1.5rem;
}
	.entry-title, .page-title {
		margin: calc(4vw + 1rem) auto calc(1rem + 1.5vw);
		font-size: calc(2em + 1.8vw);
	}

	.excerpt {
		font-family:$serif;
		font-weight: 500;
		margin-bottom:calc(1rem + 1.5vw);
		line-height: 1.44;
		font-size: 1.33em;
		opacity: .65;
	}

	.byline {
		margin-bottom: calc(1rem + 1.5vw);
	}

	.primary-category, .byline {
		font-weight:900;
		font-size:12px;
		letter-spacing: 0.08em;
		font-family: $font__theme;
		text-transform:uppercase;
		line-height:1.44;
	}

/* purgecss ignore */

.format-standard, .format-page, .format-image {

	.entry-content {
		
		& > p:first-of-type {
			margin-top:0;
			line-height: 1.44;
			font-size: 1.33em;
			font-weight:500;
			font-family:$sans-serif;
		}

		blockquote {
			font-family:$sans-serif;
		}
	}
}

.page-body {

	.authorBox {
		@extend .wrap;
		border-width:2px;
		margin: 4vw -4vw;
		padding: 25px;
		border-style:solid;
		border-left:none;
		border-bottom:none;
		border-radius:2px 5px 2px 2px;

		.heading {
			margin:0 auto .7em;
			text-align:center;
			display: flex;
			justify-content: center;
			align-items: center;
			flex-wrap: wrap;

			span {
				margin: .5em;
			}
		}

		.author-avatar {
			width:200px;
			max-width: 45%;
			text-align:center;
			float:left;
			margin:0 2vw 2vw -4vw;

			a {border:none;}

			img {
				border-radius:200px;
				@extend .spin-hover;
			}
		}

		.author-description {
			font-size: calc(12px + .4vw);

			p {
				padding-right: 4vw;
			}
		}
	}

	.post-thumbnail:hover img, .post-thumbnail:focus img {
		opacity: 1 !important;
		transform: none !important;
	}
}

#heart-sK {
	width:7em;
	margin:calc(3rem + 2vw) auto 2vw;

	a {
		border: none;
	}

	path {
		stroke-linecap:round;
		stroke-linejoin:round;
	}

	#heart {
		@extend .chameleon-color;
		stroke: currentColor;
		transition: all 6s linear;
	}

	#sK {
		stroke:var(--text-color);
	}
}

#footer-feedburner {
	margin:4vw auto;
	position: relative;

	h2 {
		padding: 1em 0;
		font-size: calc(1.35em + .6vw);
	}

	label {
		font-size:.8em;
		font-weight:900;
		font-family: $font__theme;
		letter-spacing: 0.07em;
		text-transform: uppercase;
	}

	input[type=email] {
		padding:.4em;
		border-width:2px;
		font-size: 1em;
		flex-grow: 1;
		margin: 10px 10px 0 0;
		border-radius:4px;
		border-style:solid;
	}

	.button {
		font-size: .9em;
		margin-top: 10px;

	}

	.description {
		font-size:.8rem;
		margin:20px auto 0;
	}

	.inner {
		background:var(--bg-mask);
		position: relative;
		z-index: 1;
		border-radius:20px;
	}

	.icon {
		position:absolute;
		top:0;
		right:0;
		display:block;
		z-index: 0;

		svg {
			width:14vw;
			height:14vw;
			display:block;
			transform:rotate(15deg);
		}
	}

	.flex {
		flex-wrap: wrap;
	}
}
.hero {
	z-index:8888;
	display:block;
	width:100%;
	position:relative;

	.hero--section {
		padding:4vw;
	}

	.hero--image {
		max-width:36vw;
		padding:2vw;

		img, svg{
			width:100%;
			height:auto;
			display:block;
			max-width:100%;
		}
	}

	.hero--text {
		padding:0 4vw;
		max-width:800px;

		p {
			line-height:1.44;
			font-weight:bold;
		}

		a.asterisk {
			text-decoration:none;
			padding:2px;
		}
	}
}


/* Page Styles */

.page-title {
	text-align:center;
	font-weight: 900;
	margin: 1.5rem auto 4vw;
}

.format-page .post-thumbnail {
	margin:calc(4vw + 1.5rem) auto;
}

/* Home Page Styles */

#home-cover-story {
	.posted-on {
		display:none;
	}
}

#asterisk1-note {padding:0 4vw 4vw;}

.interstitial {

	.inner {
		background:rgba(0,0,0,.75);
		background:linear-gradient(to bottom right, rgba(0,0,0,.75), rgba(0,0,0,.5)) no-repeat;
	}
}

.email-interstitial {

	h3 {
		margin:0 auto 1em;
		strong {
			font-size:1.3em;
			text-transform:uppercase;
			font-weight:900;
			color:white;
		}
	}

	.button-group {

		.grid-cell {
			text-align:right;
			margin:1em;
		}
	}
}

.post-formats-interstitial {
	text-align:center;
	color:white;

	h3 {
		margin:.5em 0;
	}

	a {
		color:white;
		display:inline-block;
		padding:2vw;
		border:none;
		border-radius:10px;

		svg {
			@extend .chameleon-color;
			fill:currentColor;
			width:6vh;
			height:6vh;
			display:block;
			margin:0 auto 1vh;
		}

		span {
			display:block;
		}

		&:hover, &:focus {
			background:linear-gradient(to bottom right, rgba(0,0,0,.05), rgba(0,0,0,.35));
		}
	}
}
/* ... */

